# agents_hub_scaffold

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  main.py  pyproject.toml  requirements.txt
agents/: __init__.py  agent.py  container.py
agents/core/domain/: exceptions.py
agents/core/factories/: email_service_factory.py
agents/helpers/: finops_callbacks.py  finops_persistence.py  hooks.py  yaml_handler.py
agents/utils/: adk_pre_built_tools.py  pre_built_functions.py  prompt_functions.py
catalog/: README.md  __init__.py
catalog/callbacks/: README.md  __init__.py
catalog/callbacks/finops_after_agent/: __init__.py  callback.py  readme.md  requirements.txt  spec.yaml
catalog/callbacks/finops_after_model/: __init__.py  callback.py  readme.md  spec.yaml
catalog/callbacks/finops_before_model/: __init__.py  callback.py  readme.md  requirements.txt  spec.yaml
catalog/callbacks/finops_persistence/: __init__.py  callback.py  readme.md  requirements.txt  spec.yaml
catalog/callbacks/translate_thought/: __init__.py  hooks.py  readme.md  requirements.txt  spec.yaml
catalog/skills/: README.md  __init__.py
catalog/skills/analyze_performance/: __init__.py  readme.md  requirements.txt  skill.py  spec.yaml
catalog/skills/smart_search/: __init__.py  readme.md  skill.py  spec.yaml
catalog/tools/: README.md  __init__.py
catalog/tools/datetime/: __init__.py  readme.md  spec.yaml
config/agent/: config.yaml
config/schema/: schema_validator.json  schema_validator.yaml
libs/after_model_callback/: metricas.py
libs/before_agent_callback/: auditoria.py
(+42 files in other folders)
