[project]
name = "images-enterprise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "google-adk>=1.9.0",
    "google-cloud-bigquery>=3.35.1",
    "mcp[cli]>=1.9.0",
    "python-dotenv>=1.1.0",
    "uv>=0.9.2",
]
